fix alignment (#4)

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -101,7 +101,7 @@ nav {
 
     .nav-links {
         position: fixed;
-        background: #2C3E2E;
+        background: #F7FDF5;
         height: 50vh;
         width: 100%;
         padding-top: 2vh;
